<resources>
    <string name="app_name" translatable="false">Zap Driver</string>
    <string name="pushwoosh_app_id_dev" translatable="false">add_app_id_(dev)_here</string>
    <string name="pushwoosh_app_id_live" translatable="false">add_app_id_(live)_here</string>
    <string name="pushwoosh_sender_id" translatable="false">add_sender_id_here</string>
    <string name="pushwoosh_partner_id_live" translatable="false">pw-(add_app_id_(live)_here)</string>
    <string name="pushwoosh_partner_id_dev" translatable="false">pw-(add_app_id_(dev)_here)</string>
    <string name="google_map_key" translatable="false">add_google_map_key_here</string>
    <string name="text_enable">Enable</string>
    <string name="no">No</string>
    <string name="press_back_message">Press back once again to close app.</string>
    <string name="enable_notification_to_continue">You need to enable/allow Notification Access from app settings to continue…</string>
    <string name="enable_location_to_continue">You need to enable location to continue</string>
    <string name="enable_storage_to_continue">You need to enable/allow storage access from app settings to continue…</string>
    <string name="enable_camera_to_continue">You need to enable/allow Camera access from app settings to continue…</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="error_message">There was an error while communicating with the server. Please try again later.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="alert_language">تريد تغيير لغتك إلى اللغة العربية؟</string>
    <string name="yes_lang">نعم</string>
    <string name="no_lang">لا</string>
    <string name="selected_language_name">العربية</string>
    <string name="alert_title_lang">انذار!</string>
    <string name="choose_image">Choose image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string-array name="WeekDaysShort">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="custom_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="MonthsShort">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <plurals name="seconds">
        <item quantity="one">%1$s second ago</item>
        <item quantity="other">%1$s seconds ago</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%1$s minute ago</item>
        <item quantity="other">%1$s minutes ago</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%1$s hour ago</item>
        <item quantity="other">%1$s hours ago</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%1$s day ago</item>
        <item quantity="other">%1$s days ago</item>
    </plurals>
    <plurals name="week">
        <item quantity="one">%1$s week ago</item>
        <item quantity="other">%1$s weeks ago</item>
    </plurals>
    <plurals name="month">
        <item quantity="one">%1$s month ago</item>
        <item quantity="other">%1$s months ago</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%1$s year ago</item>
        <item quantity="other">%1$s years ago</item>
    </plurals>
    <string-array name="MonthsList">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="error_fb">You have problem in your facebook account. Please try again later.</string>
    <string name="error_google">You seem to have a problem in your google account. Please try again later.</string>
    <string name="error_enter_email">Please enter email address</string>
    <string name="error_invalid_email">Please enter valid email address</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="error_enter_confirm_password">Please enter confirm password</string>
    <string name="error_password_length">Password length must be of at least 4 characters</string>
    <string name="error_enter_old_password">Please enter old password</string>
    <string name="error_enter_new_password">Please enter new password</string>
    <string name="error_password_match">Password and Confirm Password Doesn\'t Match</string>
    <string name="error_old_password_match">Old Password and New Password Doesn\'t Match</string>
    <string name="error_enter_confirm_new_password">Please enter confirm new password</string>
    <string name="error_new_password_match">New Password and Confirm Password Doesn\'t Match</string>
    <string name="error_old_password_length">Old password length must be of at least 6 characters</string>
    <string name="error_new_password_length">New password length must be of at least 6 characters</string>
    <string name="email_not_found">Email ID not found</string>
    <string name="user_login_successfully">User logged in successfully</string>
    <string name="label_login">Login</string>
    <string name="label_login_underline"><u>Login</u></string>
    <string name="label_login_subtitle">Let\'s get you connected with business \nowners</string>
    <string name="hint_email_id">Email Id</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="label_remember_me">Remember me</string>
    <string name="label_or">Or</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_dont_have_an_account">Dont have an account?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_select_language">Select language</string>
    <string name="label_english">English</string>
    <string name="label_arabic">عربي</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_lets_get_started">Let\'s get started</string>
    <string name="label_enter_the_phone_no">Enter the Phone No.*</string>
    <string name="label_forget_password">Forget Password ?</string>
    <string name="label_register">Register</string>
    <string name="error_please_enter_phone_number">Please enter phone number</string>
    <string name="error_please_enter_valid_phone_number">Please enter valid phone number</string>
    <string name="label_driver_details">Driver Details:</string>
    <string name="label_name">Name</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_language">Language*</string>
    <string name="label_password">Password</string>
    <string name="driver_document_details">Driver Document Details:</string>
    <string name="label_doucment_details_subtitle">Note : Please check the documents before uploading</string>
    <string name="label_profile_photo">Profile Photo *</string>
    <string name="label_upload_pic">Upload Pic</string>
    <string name="label_driver_licence_front">Driver Licence Front *</string>
    <string name="label_registration_certificate_rc">Registration Certificate (RC)*</string>
    <string name="label_vehicle_insurance">Vehicle Insurance *</string>
    <string name="label_vehicle_permit">Vehicle Permit *</string>
    <string name="label_vehicle_details">Vehicle Details:</string>
    <string name="label_registration_no_vehicle_no">Registration No./Vehicle No.</string>
    <string name="label_manufacturer">Manufacturer</string>
    <string name="label_model">Model</string>
    <string name="label_seating_capacity">Seating capacity</string>
    <string name="label_vehicle_type">Vehicle Type</string>
    <string name="label_fuel_type">Fuel Type</string>
    <string name="label_engine_capacity">Engine Capacity</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_select_language">Please select language</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_select_profile_photo">Please select profile photo</string>
    <string name="please_upload_your_drivers_license">Please upload your drivers license</string>
    <string name="please_upload_your_rc">Please upload your RC</string>
    <string name="please_upload_your_vehicle_insurance">"Please upload your vehicle insurance "</string>
    <string name="please_upload_your_vehicle_permit">Please upload your vehicle permit</string>
    <string name="please_enter_registration_number">Please enter registration number</string>
    <string name="please_enter_your_cars_manufacturer">Please enter your cars manufacturer</string>
    <string name="please_enter_model_number">Please enter model number</string>
    <string name="please_enter_your_cars_seating_capacity">Please enter your cars seating capacity</string>
    <string name="please_enter_your_vehicle_type">"Please enter your vehicle type "</string>
    <string name="please_enter_your_fuel_type">Please enter your fuel type</string>
    <string name="please_enter_your_vehicle_engine_capacity">Please enter your vehicle engine capacity</string>
    <string name="label_home">Home</string>
    <string name="label_my_profile">My Profile</string>
    <string name="label_my_bookings">My Bookings</string>
    <string name="label_my_earnings">My Earnings(₹)</string>
    <string name="label_language_setting">Language Setting</string>
    <string name="label_driver_report">Driver Report</string>
    <string name="label_share_app">Share App</string>
    <string name="label_logout">Logout</string>
    <string name="label_sign_out_message">Sign Out?</string>
    <string name="label_are_you_sure_want_to_sign_out">Are you sure want to sign out?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_total_booking">Total Booking</string>
    <string name="label_today_s_booking">Today\'s Booking</string>
    <string name="label_today_s_earning">Today\'s Earning</string>
    <string name="label_driver_name">Driver Name:</string>
    <string name="label_available_time">Available Time:</string>
    <string name="label_date">Date:</string>
    <string name="label_enable_settings_msg">Please enable ALL permissions from app settings.</string>
    <string name="label_basic_details">Basic Details</string>
    <string name="label_current_vehicle_details">Current Vehicle Details</string>
    <string name="label_owner_s_name">Owner\'s Name</string>
    <string name="label_owner_s_mobile_number">Owner\'s Mobile Number</string>
    <string name="way_to_customer">Way to Customer</string>
    <string name="call_customer">Call Customer</string>
    <string name="stop_ride">Stop Ride</string>
    <string name="reject_ride">Reject Ride</string>
    <string name="start_ride">Start Ride</string>
    <string name="accept_booking">Accept Booking</string>
</resources>