<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mvvm.intro.view.IntroActivity">

        <ImageView
            android:id="@+id/ivIntro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:background="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintDimensionRatio="H,1:1.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/txtWelcome"
            style="@style/TextStyleStartBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:text="@string/label_welcome"
            android:textSize="@dimen/largest_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtSubtitle" />

        <TextView
            android:id="@+id/txtSubtitle"
            style="@style/TextStyleStartMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/screen_margin"
            android:text="@string/label_lets_get_started"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/ivIntro" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/white_top_rounded_corner_bg"
            android:elevation="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_minus15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivIntro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/txtSelectLang"
                style="@style/TextStyleCenterBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/label_select_language"
                android:textSize="@dimen/huge_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnEnglish"
                style="@style/TextStyleStartSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_rounded_corners"
                android:elevation="@dimen/_4sdp"
                android:paddingVertical="@dimen/_9sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:text="@string/label_english"
                android:textSize="@dimen/big_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSelectLang" />

            <TextView
                android:id="@+id/btnArabic"
                style="@style/TextStyleStartSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/bg_rounded_corners"
                android:elevation="@dimen/_4sdp"
                android:paddingVertical="@dimen/_9sdp"
                android:paddingHorizontal="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:text="@string/label_arabic"
                android:textSize="@dimen/big_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEnglish" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>