<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:elevation="@dimen/_4sdp"
        app:cardBackgroundColor="@color/app_bg_color"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtHeader"
                style="@style/TextStyleCenterBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@color/txt_color_primary"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_12sdp"
                android:text="@string/choose_image"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linCamGall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtHeader">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvCamera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_4sdp"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/app_bg_color">

                        <ImageView
                            android:id="@+id/imgCamera"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:src="@drawable/ic_camera_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.25"
                            app:tint="@color/primary_color"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/txtCamera"
                            style="@style/TextStyleCenterBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/camera"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color_primary"
                            android:textSize="@dimen/medium_text_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/imgCamera"
                            app:layout_constraintStart_toStartOf="@+id/imgCamera"
                            app:layout_constraintTop_toBottomOf="@+id/imgCamera" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvGallery"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_4sdp"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/app_bg_color">

                        <ImageView
                            android:id="@+id/imgGallery"
                            android:layout_width="@dimen/_35sdp"
                            android:layout_height="@dimen/_35sdp"
                            android:src="@drawable/ic_gallery_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.25"
                            app:tint="@color/primary_color"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/txtGallery"
                            style="@style/TextStyleCenterBold"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/gallery"
                            android:textAlignment="center"
                            android:textColor="@color/txt_color_primary"
                            android:textSize="@dimen/medium_text_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/imgGallery"
                            app:layout_constraintStart_toStartOf="@+id/imgGallery"
                            app:layout_constraintTop_toBottomOf="@+id/imgGallery" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <TextView
                android:id="@+id/btnCancel"
                style="@style/CommonButtonStyle"
                android:backgroundTint="@color/color_black"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_size"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textSize="@dimen/medium_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linCamGall" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>